@@ -33,8 +33,11 @@ Version 0.1.3 (2010-??-??)
 - Fixed: InsertTags could output HTML in meta description
 - Fixed: Status labels were not available in order history
 - Fixed: sending email as text only did not work
-- Fixed multiple URL problems in address book module
-- Fixed multiple URL and template problems in shopping cart module
+- Fixed: multiple URL problems in address book module
+- Fixed: multiple URL and template problems in shopping cart module
+- Added: RGXP support for text widgets to be used in variant wizard
+- Added: RGXP logic to the row label callback for tl_iso_products
+- Added: RGXP logic to base class IsotopeProduct to handle variant options other than selects.
 - Fixed bug in runonce.php, must not use TRUNCATE to empty cart table
 
 Version 0.1.2 (2010-06-20)
